--- a/templates/index.html
+++ b/templates/index.html
@@ -1,8 +1,8 @@
 <!doctype html>
 <title>chat</title>
 <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.1/jquery.min.js"></script>
-<style>body { max-width: 500px; margin: auto; padding: 1em; background: black; color: #fff; font: 16px/1.6 menlo, monospace; }</style>
-<p><b>hi, %s!</b></p>
+<style>body { margin: auto; padding: 1em; background: black; color: #fff; font: 16px/1.6 menlo, monospace; }</style>
+<p><b>ButtonLight</b></p>
 <!-- <p>Message: <input id="in" /></p> -->
 <pre id="out"></pre>
 <script>
@@ -11,7 +11,7 @@
         var out = document.getElementById('out');
         source.onmessage = function(e) {
             // XSS in chat is fun
-            out.innerHTML =  e.data + '\\n' + out.innerHTML;
+            out.innerHTML =  e.data + '\n' + out.innerHTML;
         };
     }
     // $('#in').keyup(function(e){
